--- a/hugo.yaml
+++ b/hugo.yaml
@@ -200,8 +200,9 @@ params:
         - logos/image.png
     themes:
         event:
-            sessionizeId: ijfchepr
-            title: Azure Developer Community Day
+            sessionizeId: oz2tr38m
+            title: Azure Developer Community Day Leipzig
+            shortTitle: "#azdevcom Leipzig"
             # 👇 Fetch the ID of your event's API endpoint from
             # 👇 https://sessionize.com/app/organizer/schedule/api/0
             # 👇 and enter it here.
